--- a/config.yaml
+++ b/config.yaml
@@ -11,5 +11,5 @@ DASHBOARD:
 
 # Клиент (AGENT)
 AGENT:
-  SERVER_URL: https://test.domain.com
+  SERVER_URL: https://sec.weforks.org
   CSV_FILE: AA_csv_to_server.csv
