--- a/DASHBOARD/Dockerfile
+++ b/DASHBOARD/Dockerfile
@@ -1,5 +1,11 @@
 FROM python:3.11-slim
 
+# Установить git и docker-cli для автодеплоя
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    git \
+    docker.io \
+    && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
 # Копируем зависимости
