--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,13 @@ services:
       - "5008:5000"
     volumes:
       - dashboard-data:/app/DASHBOARD
+      # Docker socket для автодеплоя (контейнер может управлять Docker)
+      - /var/run/docker.sock:/var/run/docker.sock
+      # Git репозиторий на хосте (ИЗМЕНИТЕ ПУТЬ на реальный)
+      - /opt/testing-csv-to-server:/repo
     restart: unless-stopped
+    env_file:
+      - .env
     environment:
       - PYTHONUNBUFFERED=1
 
