--- a/DASHBOARD/Dockerfile
+++ b/DASHBOARD/Dockerfile
@@ -3,7 +3,9 @@ FROM python:3.11-slim
 # Установить git и docker-cli для автодеплоя
 RUN apt-get update && apt-get install -y --no-install-recommends \
     git \
-    docker.io \
+    curl \
+    && curl -fsSL https://download.docker.com/linux/static/stable/x86_64/docker-26.1.4.tgz \
+       | tar xz -C /usr/local/bin --strip-components=1 docker/docker \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
