--- a/DASHBOARD/Dockerfile
+++ b/DASHBOARD/Dockerfile
@@ -16,10 +16,8 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Копируем приложение
-COPY DASHBOARD/ ./DASHBOARD/
-COPY DATA/ ./DATA/
-COPY config.yaml .
+# Копируем весь проект
+COPY . .
 
 # Делаем deploy.sh исполняемым
 RUN chmod +x ./DASHBOARD/deploy.sh
